--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -11,11 +10,8 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
+	<meta name="description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
 </head>
 
 <body>
@@ -46,18 +42,18 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-auto"
-						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
+						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2048.webp 2048w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
 						sizes="100vw"
 						alt="Photo de Ryoji Iwata sur un passage clouté" width="1920" height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-auto"
-						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w"
-						sizes="100vw" alt="Concert de Nicholas Green" width="1920" height="888">
+						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-2048.webp 2048w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1700.webp 1700w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w"
+						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920" height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100 h-auto"
-						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
+						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-2048.webp 2048w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
 						sizes="100vw" alt="Mariage d'Edward Cisneros" width="1920" height="888">
 				</div>
 			</div>
@@ -77,14 +73,14 @@
 		<div class="picture left">
 			<img src="./assets/images/nina.jpg"
 				srcset="./assets/images/nina-1024.webp 1024w,./assets/images/nina-650.webp 650w, ./assets/images/nina-320.webp 320w"
-				sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Portrait de Nina Carducci" width="375" height="375">
+				sizes="(min-width: 2020px) 560px, (min-width: 1180px) calc(30vw - 40px), (min-width: 660px) calc(46vw - 74px), calc(80vw - 51px)" alt="Portrait de Nina Carducci" width="375" height="375">
 	
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
-			<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné.
+			<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné.
 				Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me
-				fait vibrer.</h6>
+				fait vibrer.</h3>
 			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer
 				au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager
 				au plus grand nombre.
@@ -101,42 +97,42 @@
 				<img data-gallery-tag="Concert" class="gallery-item"
 					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-650.webp 650w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Concert de Paul Aaron" width="440"	height="440" />
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Concert de Paul Aaron" width="440"	height="440" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-650.webp 650w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Chef d'entreprise Ali Morshedlou"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Chef d'entreprise Ali Morshedlou"
 					width="440" height="440" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-650.webp 650w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Chef d'entreprise Jason Goodman"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Chef d'entreprise Jason Goodman"
 					width="440" height="440" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-650.webp 650w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Mariage de Hannah" width="440" height="440" />
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Mariage de Hannah" width="440" height="440" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-650.webp 650w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Portrait de Ade Tunji" width="440"	height="440" />
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Portrait de Ade Tunji" width="440"	height="440" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-650.webp 650w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Mariage de Jakob Owens" width="440" height="440" />
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Mariage de Jakob Owens" width="440" height="440" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-650.webp 650w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Portrait de Nino Van Prattenburg"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Portrait de Nino Van Prattenburg"
 					width="440" height="440" />
 				<img data-gallery-tag="Concert" class="gallery-item"
 					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-650.webp 650w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Concert d'Austin Neill" width="440"height="440" />
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Concert d'Austin Neill" width="440"height="440" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-650.webp 650w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Chef d'entreprise Mateus Campos"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Chef d'entreprise Mateus Campos"
 					width="440" height="440" />
 			</div>
 		</div>
@@ -152,7 +148,7 @@
 		</div>
 	</div>
 	<div id="services">
-		<h3 class="title">Mes services</h3>
+		<h2 class="title">Mes services</h2>
 		<div class="container">
 			<div class="service">
 				<div class="service__description">
@@ -205,11 +201,11 @@
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 				<form action="" method="post">
-					<label>Nom</label>
+					<label for="nom">Nom</label>
 					<input type="text" name="nom" id="nom">
-					<label>Email</label>
+					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
-					<label>Message</label>
+					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 					<input type="submit" value="Envoyer" />
 				</form>
@@ -217,10 +213,15 @@
 			<div class="picture right">
 				<img src="./assets/images/camera.jpg"
 					srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
-					sizes="(min-width: 1180px) 1024px, (min-width: 650px) 650px, 320px" alt="Chef d'entreprise Mateus Campos" width="420"
-					height="420" />
+					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1180px) 299px, (min-width: 980px) calc(55.56vw - 196px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)" 
+					alt="Appareil photo sur fond sombre" width="420"height="420" />
 			</div>
 		</div>
 	</div>
 </body>
+	<script async src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script defer src="./assets/maugallery.js"></script>
+	<script defer src="./assets/scripts.js"></script>
 </html>
