--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" media="all and (max-width: 1000px)" href="./assets/css/media-query-1000px.css">
+	<link rel="stylesheet" media="all and (max-width: 650px)" href="./assets/css/media-query-650px.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
+	<!--<link	href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">-->
+	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-		rel="stylesheet">
+		as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript>
+		<link rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap">
+	</noscript>
 	<meta charset="UTF-8">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
-	<meta name="description" content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
+	<meta name="description"
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
 </head>
 
 <body>
@@ -42,17 +52,19 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100 h-auto"
-						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2048.webp 2048w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
-						sizes="100vw"
-						alt="Photo de Ryoji Iwata sur un passage clouté" width="1920" height="888">
+						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2048.webp 2048w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1440.webp 1440w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
+						sizes="100vw" alt="Photo de Ryoji Iwata sur un passage clouté" width="1920" height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 h-auto"
+						loading="lazy"
 						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-2048.webp 2048w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1700.webp 1700w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w"
-						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920" height="888">
+						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920"
+						height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100 h-auto"
+						loading="lazy"
 						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-2048.webp 2048w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
 						sizes="100vw" alt="Mariage d'Edward Cisneros" width="1920" height="888">
 				</div>
@@ -71,10 +83,11 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.jpg"
-				srcset="./assets/images/nina-1024.webp 1024w,./assets/images/nina-650.webp 650w, ./assets/images/nina-320.webp 320w"
-				sizes="(min-width: 2020px) 560px, (min-width: 1180px) calc(30vw - 40px), (min-width: 660px) calc(46vw - 74px), calc(80vw - 51px)" alt="Portrait de Nina Carducci" width="375" height="375">
-	
+			<img src="./assets/images/nina.jpg" loading="lazy"
+				srcset="./assets/images/nina-560.webp 560w, ./assets/images/nina-320.webp 320w"
+				sizes="(min-width: 2020px) 560px, (min-width: 1180px) calc(30vw - 40px), (min-width: 660px) calc(46vw - 74px), calc(80vw - 51px)"
+				alt="Portrait de Nina Carducci" width="375" height="375">
+
 		</div>
 		<div id="about-me">
 			<h3 class="about-me__title">A propos de moi</h3>
@@ -94,46 +107,51 @@
 		<h3 class="title">Portfolio</h3>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item"
+				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-650.webp 650w,./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Concert de Paul Aaron" width="440"	height="440" />
-				<img data-gallery-tag="Entreprises" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Concert de Paul Aaron" width="440" height="440" />
+				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-650.webp 650w,./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Chef d'entreprise Ali Morshedlou"
-					width="440" height="440" />
-				<img data-gallery-tag="Entreprises" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Chef d'entreprise Ali Morshedlou" width="440" height="440" />
+				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-650.webp 650w,./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Chef d'entreprise Jason Goodman"
-					width="440" height="440" />
-				<img data-gallery-tag="Mariages" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Chef d'entreprise Jason Goodman" width="440" height="440" />
+				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-650.webp 650w,./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Mariage de Hannah" width="440" height="440" />
-				<img data-gallery-tag="Portrait" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Mariage de Hannah" width="440" height="440" />
+				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-650.webp 650w,./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Portrait de Ade Tunji" width="440"	height="440" />
-				<img data-gallery-tag="Mariages" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Portrait de Ade Tunji" width="440" height="440" />
+				<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
 					srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1024.webp 1024w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-650.webp 650w,./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Mariage de Jakob Owens" width="440" height="440" />
-				<img data-gallery-tag="Portrait" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Mariage de Jakob Owens" width="440" height="440" />
+				<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
 					srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-1024.webp 1024w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-650.webp 650w,./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Portrait de Nino Van Prattenburg"
-					width="440" height="440" />
-				<img data-gallery-tag="Concert" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Portrait de Nino Van Prattenburg" width="440" height="440" />
+				<img data-gallery-tag="Concert" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
 					srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1024.webp 1024w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-650.webp 650w,./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Concert d'Austin Neill" width="440"height="440" />
-				<img data-gallery-tag="Entreprises" class="gallery-item"
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Concert d'Austin Neill" width="440" height="440" />
+				<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy"
 					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
 					srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1024.webp 1024w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-650.webp 650w,./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-320.webp 320w"
-					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)" alt="Chef d'entreprise Mateus Campos"
-					width="440" height="440" />
+					sizes="(min-width: 1420px) 424px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 164px, calc(33.08vw - 15px)"
+					alt="Chef d'entreprise Mateus Campos" width="440" height="440" />
 			</div>
 		</div>
 		<div class="quote">
@@ -211,17 +229,37 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.jpg"
+				<img src="./assets/images/camera.jpg" loading="lazy"
 					srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
-					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1180px) 299px, (min-width: 980px) calc(55.56vw - 196px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)" 
-					alt="Appareil photo sur fond sombre" width="420"height="420" />
+					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1180px) 299px, (min-width: 980px) calc(55.56vw - 196px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
+					alt="Appareil photo sur fond sombre" width="420" height="420" />
 			</div>
 		</div>
 	</div>
-</body>
-	<script async src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/maugallery.js"></script>
 	<script defer src="./assets/scripts.js"></script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": ["localBusiness", "ProfessionalService", "Photographer"],
+		"name": "Nina Carducci",
+		"image": "./assets/images/nina.webp",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33000",
+			"addressCountry": "France"
+		},
+		"telephone": "0556677889",
+		"url": "https://nina-carducci.github.io",
+		"openingHours": "Lundi,Mardi,Mercredi,Jeudi,Vendredi 10:00-19:00",
+		"priceRange" : "20€ - 500€"
+	}
+	</script>
+</body>
+
 </html>
