--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="icon" type="image/png"  href="./assets/images/favicon.png">
+	<link rel="icon" type="image/png"  href="https://p2r3d.github.io/favicon.png">
 	<meta charset="UTF-8">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description"
