fix: remplacement favicone de .png vers .ico

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="preload"
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<link rel="icon" type="image/png" href="./favicon.PNG">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
