fix: suppression de microdonnées au format microdata au profit du format json-ld

--- a/index.html
+++ b/index.html
@@ -255,37 +255,8 @@
 			</div>
 		</div>
 	</section>
-	<footer id="footer">
-		<div class="divInfos" itemscope itemtype="https://schema.org/Organization">
-			<div class="colInfos">
-				<h4>Adresse</h4>
-				<span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-					<span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>
-					<br>
-					<span itemprop="postalCode">33000</span>
-					<span itemprop="addressLocality">Bordeaux</span>
-				</span>
-			</div>
-			<div class="colInfos">
-				<h4>Coordonnées</h4>
-				<span>Téléphone</span><br>
-				<span itemprop="telephone">05 56 67 78 89</span>
-			</div>
-		</div>
-	
-		<div class="colInfos">
-			<h4>Horaires</h4>
-			<span itemprop="openingHours" content="Mo-Fr 10:00-19:00">Du lundi au vendredi de 10h à 19h</span>
-		</div>
-		<div class="colInfos">
-			<h4>Tarifs</h4>
-			<span itemprop="priceCurrency" content="EUR"></span>
-			<span itemprop="priceSpecification" itemscope itemtype="https://schema.org/PriceSpecification">
-				<span itemprop="price" content="50">Retouche photo : 50€</span><br>
-				<span itemprop="price" content="350">Shooting : 350€</span><br>
-				<span itemprop="price" content="400">Album : 400€</span>
-			</span>
-		</div>
+	<footer id="footer">	
+		<p>Nina Carducci - Mai 2023</p>
 	</footer>
 	<script src="./assets/bootstrap/bootstrap.bundle-min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -311,7 +282,5 @@
 		"priceRange" : "50€ - 400€"
 	}
 	</script>
-
 </body>
-
 </html>
