feat: minification des .css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<!-- Styles CSS -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/css/style.css">
-	<link rel="stylesheet" media="all and (max-width: 1180px)" href="./assets/css/media-query-1180px.css">
-	<link rel="stylesheet" media="all and (max-width: 1000px)" href="./assets/css/media-query-1000px.css">
-	<link rel="stylesheet" media="all and (max-width: 650px)" href="./assets/css/media-query-650px.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap-min.css">
+	<link rel="stylesheet" href="./assets/css/style-min.css">
+	<link rel="stylesheet" media="all and (max-width: 1180px)" href="./assets/css/media-query-1180px-min.css">
+	<link rel="stylesheet" media="all and (max-width: 1000px)" href="./assets/css/media-query-1000px-min.css">
+	<link rel="stylesheet" media="all and (max-width: 650px)" href="./assets/css/media-query-650px-min.css">
 	<!-- Polices et icônes -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -82,12 +82,12 @@
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
+				<span class="visually-hidden">Précédente</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="next">
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
+				<span class="visually-hidden">Suivante</span>
 			</button>
 		</div>
 	</div>
