fix: changement image pour référencement réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
 	<link rel="icon" href="favicon.ico" type="image/ico">
 	<title>Nina Carducci, photographe professionnelle à Bordeaux</title>
 	<meta name="description"
-		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
+		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, 
+		une émotion, une situation, un endroit, ou encore une lumière.">
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
 	<meta name="twitter:description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
-	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp">
+	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina.jpg">
 	<!-- Open Graph meta (Facebook, Linkedin) -->
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
 	<meta property="og:type" content="article">
 	<meta property="og:description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
-	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina-650.webp">
+	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina.jpg">
 </head>
 
 <body>
