--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 	<meta name="twitter:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
 	<meta name="twitter:description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
-	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina.jpg">
+	<meta name="twitter:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina_rs.jpg">
 	<!-- Open Graph meta (Facebook, Linkedin) -->
 	<meta property="og:title" content="Nina Carducci, photographe professionnelle à Bordeaux">
 	<meta property="og:type" content="article">
 	<meta property="og:description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
-	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina.jpg">
+	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina_rs.jpg">
 </head>
 
 <body>
