feat: ajout du cache-control 1h

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
@@ -33,6 +32,8 @@
 	<meta property="og:description"
 		content="Nina Carducci, photographe professionnelle à Bordeaux, vous propose d'immortaliser un moment, une émotion, une situation, un endroit, ou encore une lumière.">
 	<meta property="og:image" content="https://p2r3d.github.io/nina-carducci.github.io/assets/images/nina_rs.jpg">
+	<!-- Paramètre de cache -->
+	<meta http-equiv="Cache-control" content="max-age=3600">
 </head>
 
 <body>
