fix: changement de largeur d'images

--- a/index.html
+++ b/index.html
@@ -63,21 +63,20 @@
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100 h-auto"
-						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2048.webp 2048w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1440.webp 1440w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
-						sizes="(min-width: 2040px) 1920px, calc(92.19vw + 58px)" alt="Photo de Ryoji Iwata sur un passage clouté"
+						srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp 1920w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1440.webp 1440w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1024.webp 1024w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650.webp 650w,./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-320.webp 320w"
+						sizes="100vw" alt="Photo de Ryoji Iwata sur un passage clouté"
 						width="1920" height="888">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto"
-						loading="lazy"
-						srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-2048.webp 2048w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1700.webp 1700w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w"
-						sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920"
-						height="888">
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100 h-auto" loading="lazy"
+						srcset="
+							./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1700.webp 1700w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1440.webp 1440w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1024.webp 1024w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650.webp 650w,./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-320.webp 320w
+						" sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)" alt="Concert de Nicholas Green" width="1920" height="888">
 				</div>
 				<div class="carousel-item">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100 h-auto"
 						loading="lazy"
-						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-2048.webp 2048w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
+						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1440.webp 1440w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1024.webp 1024w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650.webp 650w,./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-320.webp 320w"
 						sizes="100vw" alt="Mariage d'Edward Cisneros" width="1920" height="888">
 				</div>
 			</div>
@@ -251,7 +250,7 @@
 			</div>
 			<div class="picture right">
 				<img src="./assets/images/camera.jpg" loading="lazy"
-					srcset="./assets/images/camera-1024.webp 1024w,./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
+					srcset="./assets/images/camera-650.webp 650w,./assets/images/camera-320.webp 320w"
 					sizes="(min-width: 1700px) 419px, (min-width: 1420px) calc(12.69vw + 206px), (min-width: 1020px) calc(28.16vw - 35px), (min-width: 980px) calc(-510vw + 5346px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
 					alt="Appareil photo sur fond sombre" width="300" height="300">
 			</div>
